--- a/src/pages/main-server/main-server.html
+++ b/src/pages/main-server/main-server.html
@@ -36,28 +36,28 @@
     <ion-grid class='select'>
       <ion-row>
         <ion-col col-6>
-          <button ion-button round class='mycolor' [(navPush)]='FindDoctorPage'>
+          <button ion-button round class='mycolor mybuttonblue' [(navPush)]='FindDoctorPage'>
             <ion-icon name="ios-people-outline"></ion-icon><br>
             <div class='item'>Find Doctor</div>
             <div class='expla'>113 doctors</div>
           </button>
         </ion-col>
         <ion-col col-6>
-          <button ion-button round class='mycolorGray' [(navPush)]='FindHospitalPage'>
+          <button ion-button round class='mycolorGray mybuttongray' [(navPush)]='FindHospitalPage'>
             <ion-icon name="ios-home-outline"></ion-icon><br>
             <div class='item'>Find Hospital</div>
             <div class='expla'>269 hospital</div>
           </button>
         </ion-col>
         <ion-col col-6>
-          <button ion-button round class='mycolorGray' [(navPush)]='AppointmentPage'>
+          <button ion-button round class='mycolorGray mybuttongray' [(navPush)]='AppointmentPage'>
             <ion-icon name="ios-calendar-outline"></ion-icon><br>
             <div class='item'>Appointment</div>
             <div class='expla'>59 available</div>
           </button>
         </ion-col>
         <ion-col col-6>
-          <button ion-button round class='mycolorGray'>
+          <button ion-button round class='mycolorGray mybuttongray'>
             <ion-icon name="ios-paper-outline"></ion-icon><br>
             <div class='item'>Price Services</div>
             <div class='expla'>26 services</div>
