--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -8,7 +8,7 @@
 
 </ion-header>
 
-<ion-content overflow-scroll="true">
+<ion-content>
 
   <div class='title'>
     SIGN IN
@@ -27,7 +27,7 @@
     <ion-item no-lines>
       <input type="checkbox" item-start><span>remember me</span>
       <span item-end>
-          <button ion-button round color='light' (tap)='showToastWithCloseButton()'>
+          <button ion-button round [(navPush)]='ForgotPasswordPage'>
             ?
           </button>
       </span>
